--- a/src/index.css
+++ b/src/index.css
@@ -109,20 +109,24 @@ textarea {
 
 .tag-select {
     width: inherit;
-    position: relative;
 }
 
-.tag-select__header {
+.tag-select__content {
     background-color: #E3E3E3;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
     width: 100%;
     height: 48px;
     border-radius: 3px 3px 0px 0px;
     cursor: pointer;
+    position: relative;
+}
+
+.tag-select__header {
+    padding: 10px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
 }
 
 .tag-select__options {
@@ -131,7 +135,7 @@ textarea {
     width: 100%;
     overflow: auto;
     position: absolute;
-    top: 68px;
+    top: 48px;
     overflow-x: hidden;
 }
 
@@ -201,6 +205,7 @@ ul {
     padding: 14px;
     cursor: pointer;
     text-align: center;
+    margin-top: 1rem;
 }
 
 .input-container {
@@ -280,6 +285,10 @@ ul {
     box-sizing: border-box;
 }
 
+input {
+    all: unset;
+}
+
 select {
     appearance: none;
     background-color: transparent;
@@ -296,4 +305,9 @@ select {
 
 option {
     all: unset;
+}
+
+.clearfix {
+    display: table;
+    clear: both;
 }
