--- a/src/style/global.css
+++ b/src/style/global.css
@@ -2,15 +2,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: #F5F5F5;
-    font-family: 'system-ui';
+    font-family: 'system-ui', sans-serif;
 }
-
-.header {
-    display: flex;
-    gap: 50px;
-    padding: 32px 5%;
-}
-
 
 a:link,
 a:visited,
@@ -34,6 +27,10 @@ input {
 }
 
 .text-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
     cursor: pointer;
     padding: 6px 20px;
 }
